initial work to reindex elastic search from hocs-casework

--- a/helm/hocs-casework-search-indexer/Chart.yaml
+++ b/helm/hocs-casework-search-indexer/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: hocs-casework
+name: hocs-casework-search-indexer
 version: 1.0.0
 dependencies:
   - name: hocs-backend-service
