--- a/helm/hocs-casework-search-indexer/values.yaml
+++ b/helm/hocs-casework-search-indexer/values.yaml
@@ -1,13 +1,13 @@
 ---
 hocs-backend-service:
-  nameOverride: hocs-casework
+  nameOverride: hocs-casework-search-indexer
 
   app:
     image:
-      repository: quay.io/ukhomeofficedigital/hocs-casework
+      repository: quay.io/ukhomeofficedigital/hocs-casework-search-indexer
     resources:
-       limits:
-         cpu: 2000m
-         memory: 2048Mi
-       requests:
-         memory: 2048Mi
+      limits:
+        cpu: 2000m
+        memory: 2048Mi
+      requests:
+        memory: 2048Mi
