--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,13 @@
 plugins {
-    id 'org.springframework.boot' version '2.7.2'
+    id 'org.springframework.boot' version '2.7.3'
     id 'io.spring.dependency-management' version '1.0.13.RELEASE'
     id 'java'
 }
 
 def elasticVersion = '7.10.2'
 
-group = 'com.example'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+group = 'uk.gov.digital.ho.hocs'
+sourceCompatibility = JavaVersion.VERSION_17
 
 configurations {
     compileOnly {
