--- a/helm/values-preprod.yaml
+++ b/helm/values-preprod.yaml
@@ -3,14 +3,13 @@ hocs-backend-service:
   minReplicas: 1
   maxReplicas: 1
 
-  deploymentAnnotations:
-    downscaler/uptime: "Mon-Sun 07:55-18:05 Europe/London"
+  deploymentAnnotations: { }
 
   app:
     resources:
       limits:
         cpu: 300m
-        memory: 768Mi
+        memory: 4Gi
       requests:
         cpu: 100m
         memory: 768Mi
