--- a/helm/values-qax.yaml
+++ b/helm/values-qax.yaml
@@ -1,5 +1,4 @@
 ---
 hocs-backend-service:
 
-  deploymentAnnotations:
-    downscaler/downscale-period: "Mon-Sun 18:10-07:50 Europe/London"
+  deploymentAnnotations: { }
