--- a/build.gradle
+++ b/build.gradle
@@ -35,12 +35,14 @@ dependencies {
     implementation "com.google.guava:guava:31.1-jre"
     annotationProcessor 'org.projectlombok:lombok'
     annotationProcessor 'org.springframework:spring-context-indexer:5.3.22'
+    annotationProcessor 'org.springframework:spring-context-indexer:5.3.22'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'org.postgresql:postgresql'
-
+    testImplementation 'org.flywaydb:flyway-core:8.5.13'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'net.javacrumbs.json-unit:json-unit-assertj:2.36.0'
 }
 
 dependencyManagement {
@@ -53,6 +55,6 @@ jar {
     enabled = false
 }
 
-tasks.named('test') {
+test {
     useJUnitPlatform()
 }
