Update helm config Use new OpenSearch cluster in not prod Use same requests and limits for QoS

--- a/helm/hocs-casework-search-indexer/templates/job.yaml
+++ b/helm/hocs-casework-search-indexer/templates/job.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: rebuild-es-indexes
+  name: rebuild-os-indexes
   labels:
     version: {{ .Values.version }}
 spec:
