Update environment vars Remove unnecessary truststore parameter Use correct release name variable in outbound proxy parameter Add hocs-backend role to allow access to elastic search through outbound proxy

--- a/helm/hocs-casework-search-indexer/templates/job.yaml
+++ b/helm/hocs-casework-search-indexer/templates/job.yaml
@@ -6,6 +6,10 @@ metadata:
     version: {{ .Values.version }}
 spec:
   template:
+    metadata:
+      labels:
+        name: hocs-casework-search-indexer
+        role: hocs-backend
     spec:
       containers:
         - name: hocs-casework-search-indexer
