HOCS-5983: Allow tool to access Elasticsearch and the Databases

--- a/helm/hocs-casework-search-indexer/templates/job.yaml
+++ b/helm/hocs-casework-search-indexer/templates/job.yaml
@@ -4,6 +4,8 @@ metadata:
   name: rebuild-os-indexes
   labels:
     version: {{ .Values.version }}
+    outbound: required
+    database: required
 spec:
   template:
     metadata:
