--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,8 @@ on:
 
 jobs:
   test:
-    uses: UKHomeOffice/hocs-github-actions/.github/workflows/test-gradle.yml@v2
+    uses: UKHomeOffice/sas-github-workflows/.github/workflows/test-gradle.yml@v1
     with:
-      components: 'localstack postgres'
-      elastic: 'true'
+      dockerComposeComponents: 'localstack postgres'
+      dockerComposeCommand: './ci/docker-compose.yml -f ./ci/docker-compose.elastic.yml'
+    secrets: inherit
