HOCS-6419: refactor and improve service
- Refactor out the index creation to own service.
- Add aliases on index creation that support read and write. For
instances of multiple creation an additional global read alias is added.
- Change to repository method to utilise a createdDate to better support
streaming of large data with pages.
- Support the ability to specify a baseline prefix for index creation.
- Pull out configuration logging to instantiation.
- Move the processing sleep to main command line runner and extend to 20
seconds wait.
- Add assertion to throw obvious error on failed case index.

--- a/helm/hocs-casework-search-indexer/values.yaml
+++ b/helm/hocs-casework-search-indexer/values.yaml
@@ -1,5 +1,4 @@
 ---
-
 app:
   image:
     repository: quay.io/ukhomeofficedigital/hocs-casework-search-indexer
@@ -11,9 +10,10 @@ app:
       cpu: 2000m
       memory: 2048Mi
   mode: SINGULAR
-  newIndex: 'false'
-  batchSize: '200'
-  batchInterval: '500'
-  elasticPrefix: '{{ .Release.Namespace }}-latest'
-
-
+  index:
+    baseline:
+    prefix:
+  batch:
+    size: '200'
+    interval: '500'
+  dataCreatedBefore:
