--- a/src/main/resources/application-localstack.yml
+++ b/src/main/resources/application-localstack.yml
@@ -1,12 +1,11 @@
-management:
-health:
-  elasticsearch:
-    enabled: false
-
 aws:
   region: eu-west-2
   es:
     host: localhost.localstack.cloud
     port: 4566
-    results-limit: 500
-    index-prefix: local
+
+app:
+  index:
+    baseline: local-case
+    prefix: local
+  data-created-before:
