--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,7 +22,12 @@ spring:
   datasource:
     url: jdbc:postgresql://${db.host:localhost}:${db.port:5432}/${db.name:postgres}?currentSchema=${db.schema.name:casework}&user=${db.username:root}&password=${db.password:dev}&stringtype=unspecified
 
-mode: SINGULAR
-new-index: false
-batch.size: 1000
-batch.interval: 200
+app:
+  index:
+    baseline:
+    prefix:
+  mode: MULTIPLE
+  batch:
+    size: 1000
+    interval: 200
+  data-created-before:
