--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,4 +1,3 @@
-
 spring:
   jpa:
     properties:
@@ -20,7 +19,12 @@ spring:
     locations: classpath:/db/migration/postgresql
     schemas: ${db.schema.name:caseworkindexer}
 
-mode: MULTIPLE
-new-index: false
-batch.size: 5
-batch.interval: 0
+app:
+  index:
+    baseline: local-case
+    prefix: local
+  mode: MULTIPLE
+  batch:
+    size: 5
+    interval: 0
+  dataCreatedBefore: 2023-01-01T00:00:00.000Z
