HOCS-6419: correct label annotations onto template

--- a/helm/hocs-casework-search-indexer/templates/job.yaml
+++ b/helm/hocs-casework-search-indexer/templates/job.yaml
@@ -4,14 +4,15 @@ metadata:
   name: rebuild-os-indexes
   labels:
     version: {{ .Values.version }}
-    outbound: required
-    database: required
 spec:
   template:
     metadata:
       labels:
         name: hocs-casework-search-indexer
         role: hocs-backend
+        outbound: required
+        database: required
+        version: {{ .Values.version }}
     spec:
       containers:
         - name: hocs-casework-search-indexer
