HOCS-6419: improve handling of indexes
This change includes the ability to toggle the creation and migration of
indexes and data. In attempt to mitigate indexing issues, a new
timestamp property has been added that will support continuation of
indexing data into existing indexes if required. Additionally, a further
property has been added that enables the retrieval of specific case
types, enabling the continuation from specific case types and avoid
reprocessing of completed index migration.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,11 +23,16 @@ spring:
     url: jdbc:postgresql://${db.host:localhost}:${db.port:5432}/${db.name:postgres}?currentSchema=${db.schema.name:casework}&user=${db.username:root}&password=${db.password:dev}&stringtype=unspecified
 
 app:
-  index:
+  mode: MULTIPLE
+  create:
+    enabled: true
     baseline:
     prefix:
-  mode: MULTIPLE
-  batch:
-    size: 1000
-    interval: 200
-  data-created-before:
+    timestamp:
+  migrate:
+    enabled: true
+    batch:
+      size: 1000
+      interval: 200
+    dataCreatedBefore:
+    types:
