--- a/helm/hocs-casework-search-indexer/values.yaml
+++ b/helm/hocs-casework-search-indexer/values.yaml
@@ -9,11 +9,16 @@ app:
     requests:
       cpu: 2000m
       memory: 2048Mi
-  mode: SINGULAR
-  index:
+  mode: 'MULTIPLE'
+  create:
+    enabled: 'true'
     baseline:
     prefix:
-  batch:
-    size: '200'
-    interval: '500'
-  dataCreatedBefore:
+    timestamp:
+  migrate:
+    enabled: 'true'
+    batch:
+      size: '100'
+      interval: '5000'
+    dataCreatedBefore:
+    types:
