Improve case retrieval date handling
Previously all cases upto the end date we're returned, causing
potentially unnecessary cases to be re-indexed. This change allows for a
startDate and endDate (both optional) to be more descriptive about the
cases picked. This will improve reindexing of cases within known ranges.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,6 +34,7 @@ app:
     batch:
       size: 1000
       interval: 200
-    dataCreatedBefore:
+    startDate:
+    endDate:
     types:
     offset: 0
