--- a/helm/hocs-casework-search-indexer/values.yaml
+++ b/helm/hocs-casework-search-indexer/values.yaml
@@ -20,6 +20,7 @@ app:
     batch:
       size: '100'
       interval: '5000'
-    dataCreatedBefore:
+    startDate:
+    endDate:
     types:
     offset:
