--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -31,6 +31,7 @@ app:
     batch:
       size: 5
       interval: 0
-    dataCreatedBefore: 2023-01-01T00:00:00.000Z
+    startDate:
+    endDate: 2023-01-01T00:00:00.000Z
     types:
     offset: 0
